--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,7 @@ header{
     width: fit-content;
     width: -webkit-fit-content;
     width: -moz-fit-content;
+    height: 40px;
 }
 
 .episodes__item__image img{
