--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,10 +22,25 @@ body{
     background: #191919;
     color: white;
     overflow-x: hidden;
+    transition: .7s;
 }
+
+.light{
+    background-color: white;
+    color: black;
+}
+
 a {
     color: white;
     transition: .7s;
+}
+
+.lightA{
+    color: black;
+}
+
+.lightA i {
+    color: black;
 }
 
 a:hover {
@@ -160,7 +175,7 @@ header{
     width: fit-content;
     width: -webkit-fit-content;
     width: -moz-fit-content;
-    height: 40px;
+    height: fit-content;
 }
 
 .episodes__item__image img{
@@ -196,6 +211,7 @@ header{
     border-radius: 32px;
     padding: 40px 61px 40px 40px ;
     display: flex;
+    color: white;
 }
 
 .episodes__item__image{
@@ -303,6 +319,10 @@ i{
     width: 85%;
 }
 
+.lightText{
+    color: rgba(162, 162, 162, 0.7);
+}
+
 .biography__text p{
     margin-top: 28px;
 }
@@ -319,7 +339,7 @@ i{
     display: flex;
     justify-content: space-between;
     padding: 60px 60px 75px 60px;
-
+    color: white;
 }
 
 .subscribe__suptitle{
@@ -379,6 +399,7 @@ i{
     background-color: black;
     border-radius: 32px;
     padding: 54px 60px 51px 50px;
+    color: white;
 }
 
 .estimates__text{
@@ -428,6 +449,10 @@ footer{
     justify-content: space-between;
 }
 
+.footer__soclink i {
+    font-size: 26px;
+}
+
 .footer__menu{
     display: block;
     margin-right: 120px;
@@ -450,6 +475,13 @@ footer{
     width: 100%;
 }
 
+.poebota{
+    display: flex;
+}
+
+.poebota2{
+    width: 32%;
+}
 /*            */
 /*   MEDIA    */
 /*            */
@@ -565,6 +597,9 @@ footer{
     }
     .footer__wrapper{
         width: 70%;
+    }
+    .poebota2{
+        width: 35%;
     }
 }
 
@@ -702,13 +737,11 @@ footer{
     .episodes__btn{
         font-size: 14px;
         height: 30px;
-        width: 100%;
         width: fit-content;
     }
     .episodes__btn a {
         padding: 6px 7.5px 4px 8px;
         height: 30px;
-        width: 100%;
     }
     .episodes__btn.item{
         width: fit-content;
